' Generated by UML Generator
' Encoded: ZLRRRjim37ttLmZ57fpMBlgu1LjMRqs704rNDCa6hCWArTOoeRRaIKglwBvzkbcsV4dtPfCyHoGFAVkO2yZ4jiW3Vej92HaiG9f3pXCX6BxP2ZHBALdW9mIEWjyuGo35BCrH4EWea9GbU0u0E7YMH0AdBw20c8IGRVWOB2G5sLojHsDmHt4Ml5Ie4oZWGb26D3Q6UJwdTnX9IC8OV3p3NBpNbWdu00YwRvWduSX2LXmn3w4CWu1O9UdE3NSS6O51SiLqi44YgT3Xg8klOpI97w9fR8GE__Guoy92FSsogcCIeNqg3dC5cMKhWlziKRZLBut06qfp18a9dHiU6zjbhO8z8Rx176TIEqgc3oagrOEMvU-0CqICKSOAn3dS8CTUa-eiZB82Yzo5A4Ch9sNQ8C9y7OnlucJJXA775O4MKmG6UIhLbef0oU7ETYf83ThsBvhELwzAp9NwTIlAhVZEi42ijGVtodY9KbeKY9WMyYKznRaHKIPQ3qG44DbW8glp0LDjZS0lYIAmG0qfzK9rpfigQUmfMgQvhz8mbIlf0Z8kxKO_nwwxf6YRoZclAgBjZBtik6sqpgn3rbUFH5IqOPk_BrxUNHpjtae_Td0xNIlwn31zoQgBP5pVPQxeFbZOXwW6ipKbfvIfHFIOZ7LlHtPOElEdd2OZ5NpUqBMo-RkMurkKsOdVkN8kWIPd17p62Bp6LrMuiaoTBJENMyTyrkHzPGVj5KNPRcdgOLrCBw_Fa_dq-Y9PBgUNvsCvyq8kC97V3ljqA0KfrUJj_RnAuXymVbeVX1_7mBsCzj_iZRgqivF_93sAtwsVtxvOFlLc-NJtNKc3OnEZ1y5WAZx34WkOdo5rma2d9E6T8JJxuUx1QeSyhr6ZxMeAsETheAGmzVUTnh7zblasXGcys_FmSDAxS47l5kvBZbhUtX15g8-f1yH77Kk0_FFv1m
' URL: http://www.plantuml.com/plantuml/uml/ZLRRRjim37ttLmZ57fpMBlgu1LjMRqs704rNDCa6hCWArTOoeRRaIKglwBvzkbcsV4dtPfCyHoGFAVkO2yZ4jiW3Vej92HaiG9f3pXCX6BxP2ZHBALdW9mIEWjyuGo35BCrH4EWea9GbU0u0E7YMH0AdBw20c8IGRVWOB2G5sLojHsDmHt4Ml5Ie4oZWGb26D3Q6UJwdTnX9IC8OV3p3NBpNbWdu00YwRvWduSX2LXmn3w4CWu1O9UdE3NSS6O51SiLqi44YgT3Xg8klOpI97w9fR8GE__Guoy92FSsogcCIeNqg3dC5cMKhWlziKRZLBut06qfp18a9dHiU6zjbhO8z8Rx176TIEqgc3oagrOEMvU-0CqICKSOAn3dS8CTUa-eiZB82Yzo5A4Ch9sNQ8C9y7OnlucJJXA775O4MKmG6UIhLbef0oU7ETYf83ThsBvhELwzAp9NwTIlAhVZEi42ijGVtodY9KbeKY9WMyYKznRaHKIPQ3qG44DbW8glp0LDjZS0lYIAmG0qfzK9rpfigQUmfMgQvhz8mbIlf0Z8kxKO_nwwxf6YRoZclAgBjZBtik6sqpgn3rbUFH5IqOPk_BrxUNHpjtae_Td0xNIlwn31zoQgBP5pVPQxeFbZOXwW6ipKbfvIfHFIOZ7LlHtPOElEdd2OZ5NpUqBMo-RkMurkKsOdVkN8kWIPd17p62Bp6LrMuiaoTBJENMyTyrkHzPGVj5KNPRcdgOLrCBw_Fa_dq-Y9PBgUNvsCvyq8kC97V3ljqA0KfrUJj_RnAuXymVbeVX1_7mBsCzj_iZRgqivF_93sAtwsVtxvOFlLc-NJtNKc3OnEZ1y5WAZx34WkOdo5rma2d9E6T8JJxuUx1QeSyhr6ZxMeAsETheAGmzVUTnh7zblasXGcys_FmSDAxS47l5kvBZbhUtX15g8-f1yH77Kk0_FFv1m
' Generated on: 2025-11-28T22:35:31.250980500

@startuml
skinparam classAttributeIconSize 0
hide circle

class App {
  +{static} main(args: String[]): void
}

class DataStore {
  -allMovies: ArrayList<Movie> = new ArrayList<>()
  -allUsers: ArrayList<User> = new ArrayList<>()
  --
  +DataStore(allMovies: ArrayList<Movie>, allUsers: ArrayList<User>)
  +getAllMovies(): ArrayList<Movie>
  +getAllUsers(): ArrayList<User>
  +getMovieById(movieId: String): Movie
  +isUserIdUnique(userId: String): boolean
  +isMovieIdUnique(movieId: String): boolean
}

class DataValidationException {
  ~DataValidationException(errorrmessage: String)
}

class Movie {
  -title: String
  -movieId: String
  -genres: ArrayList<String>
  --
  +Movie(title: String, movieId: String, genres: ArrayList<String>)
  +getTitle(): String
  +getMovieId(): String
  +getGenres(): ArrayList<String>
}

class OutputWriter {
  +{static} writeRecommendationsToFile(users: List<User>, engine: RecommendationEngine, filename: String): void
  +{static} writeErrorToFile(errorMessage: String, filename: String): void
}

class Parsing {
  -{static} MovieFile: String
  -{static} UserFile: String
  --
  +{static} setMovieFile(MovieFile: String): void
  +{static} setUserFile(UserFile: String): void
  +{static} parseMovies(): ArrayList<Movie>
  +{static} parseUsers(): ArrayList<User>
}

class RecommendationEngine {
  -dataStore: DataStore
  --
  +RecommendationEngine(dataStore: DataStore)
  +getRecommendationsForUser(user: User): List<String>
}

class User {
  -userName: String
  -userId: String
  -likedMovieIds: ArrayList<String>
  --
  +User(userName: String, userId: String, likedMovieIds: ArrayList<String>)
  +getUserName(): String
  +getUserId(): String
  +getLikedMovieIds(): ArrayList<String>
}

class Validator {
  -dataStore: DataStore
  -{static} USER_NAME_PATTERN: Pattern = Pattern.compile("^[A-Za-z]+(?: [A-Za-z]+)*$")
  -{static} USER_ID_PATTERN: Pattern = Pattern.compile("^[0-9]{8}[A-Za-z0-9]$")
  --
  +Validator(dataStore: DataStore)
  -extractCapitalLetters(): ArrayList<String>
  +validateMovieTitle(): void
  +validateMovieId(): void
  +validateUserName(): void
  +validateUserId(): void
}

DataStore o-- Movie
DataStore o-- User
OutputWriter ..> RecommendationEngine
RecommendationEngine *-- DataStore
RecommendationEngine ..> User
Validator *-- DataStore
@enduml